css/style.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&display=swap");

:root {
  --cor-white: #fff;
}
* {
  margin: 0px;
  padding: 0px;
  min-width: none;
}
::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: white;
  border-radius: 30px;
}
::-webkit-scrollbar-thumb {
  width: 15px;
  height: 15px;
  border-right: 2px solid white;
  border-left: 2px solid white;
  background: blue;
  border-radius: 50px;
}

body {
  font-family: "Roboto";
  width: 100vw;
  /* overflow-x: hidden; */
  background-color: whitesmoke;
}
header {
  height: 80px;
  width: 100%;
  color: black;
}
h1 {
  margin: auto;
  padding: 10px 0 10px 0;
  text-align: center;
  font-size: 2.5em;
  transition-delay: 0.2s;
  transition-duration: 0.5s;
}
h1:hover {
  letter-spacing: 2px;
  transition-delay: 0.4s;
  transition-duration: 0.5s;
}
.rotate {
  display: inline;
}

nav {
  margin-bottom: 10px;
  padding-bottom: 10px;
  text-align: center;
}
nav > a {
  font-weight: bold;
  background-color: white;
  color: blue;
  text-decoration: none;
  margin-left: 5px;
  margin-right: 5px;
  padding: 5px 1% 5px 1%;
  border-radius: 10px;
  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.05);
  transition-duration: 0.6s;
  transition-delay: 0.1s;
}
nav > a:hover {
  background-color: blue;
  color: white;
  padding: 5px 2% 5px 2%;
  box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.2);
  transition-duration: 0.3s;
  transition-delay: 0.3s;
}
main {
  background-color: blue;
  height: 450px;
  width: 450px;
  margin: 0 auto;
  border-radius: 20px;
  transition-duration: 5s;
  transition-delay: 0.2s;
  border-top: 10px solid blue;
  border-bottom: 10px solid blue;
}

section {
  background-color: black;
  height: 100%;
  width: 100%;
  margin: 0 auto;
  border-radius: 20px;
}

div {
  width: 100%;
  display: inline-block;
  margin: auto;
}

h3 {
  color: white;
  font-size: 1.35em;
  text-align: center;
  padding-top: 50px;
  margin: 10px;
}
#welcome {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 24px;
}
#welcome p {
  text-align: justify;
  font-size: 1.05em;
  text-indent: 30px;
  color: white;
  margin: 24px 48px;
}

#div-btt-start {
  text-align: center;
  margin-top: 24px;
}
#start {
  background-color: white;
  color: black;
  font-weight: bold;
  font-size: 1.8em;
  text-decoration: none;
  padding: 5px 10px 5px 10px;
  border-radius: 20px;
  transition-duration: 1.5s;
  transition-delay: 0.3s;
}
#start:hover {
  background-color: blue;
  color: white;
  padding: 8px 15px 8px 15px;
  border-radius: 30px;
  transition-duration: 0.2s;
}

footer {
  text-align: center;
  font-weight: bold;
  color: black;
  height: 50px;
}
footer p {
  color: black;
  margin: 20px auto;
  text-align: center;
}
footer a {
  color: black;
  font-weight: bold;
  text-indent: 0px;
  text-decoration: none;
  transition-delay: 0.2;
  transition-duration: 1s;
}
footer a:hover {
  transition-duration: 0.5s;
  color: blue;
}

